@@ -11,6 +11,11 @@ SET(PACKAGE_MINOR_VERSION "0")
 SET(PACKAGE_BUILD_VERSION "8")
 SET(PACKAGE_VERSION "${PACKAGE_MAJOR_VERSION}.${PACKAGE_MINOR_VERSION}.${PACKAGE_BUILD_VERSION}")
 
+SET(SO_MAJOR_VERSION "1")
+SET(SO_MINOR_VERSION "0")
+SET(SO_BUILD_VERSION "0")
+SET(SO_VERSION "${SO_MAJOR_VERSION}.${SO_MINOR_VERSION}.${SO_BUILD_VERSION}")
+
 SET(PACKAGE_STRING "openal")
 SET(PACKAGE_BUGREPORT "openal-devel@opensource.creative.com")
 SET(OPERATING_SYSTEM "${CMAKE_SYSTEM_NAME}")
@@ -569,7 +574,7 @@ ENDIF(BUILD_STATIC)
 
 ADD_LIBRARY(openal SHARED ${OPENAL_OBJS})
 SET_TARGET_PROPERTIES(openal PROPERTIES LINKER_LANGUAGE C)
-SET_TARGET_PROPERTIES(openal PROPERTIES VERSION ${PACKAGE_VERSION} SOVERSION ${PACKAGE_MAJOR_VERSION})
+SET_TARGET_PROPERTIES(openal PROPERTIES VERSION ${SO_VERSION} SOVERSION ${SO_MAJOR_VERSION})
 TARGET_LINK_LIBRARIES(openal ${ADD_LIBS})
 INSTALL_TARGETS(/lib openal)
 INSTALL_FILES(/include/AL FILES common/include/AL/al.h
